@@ -1,3 +1,6 @@
+* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.6.0
+- Update from camptocamp/systemd to puppet/systemd
+
 * Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.5.0
 - Removed support for Puppet 5
 - Ensured support for Puppet 7 in requirements and stdlib
